k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: bluegreen
spec:
  type: NodePort
  selector:
    app: bluegreen-demo
    version: blue
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
