k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: bluegreen
spec:
  type: NodePort
  selector:
    app: bluegreen-demo
    version: green
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
